--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,9 +19,9 @@ $blue: #4183C4;
 // Some cool main theme colors(violet:#8476ad;blue:#5cacee;red:#ff7373,#ff6f69;green:#6acf64,#2ddbb3;orange:#ffa268)
 
 $mono-color:#21313b;                // main theme color(header, links, footer icons, buttons, post-title)
-$hl-color: #eee;              // header link color (author name and posted on date) for blog post meta 
-$navbar-hover-color:#eee;        // navbar hover color (site name and navbar links hover color)
-$link-color: #eee;        // normal hyperlink color other than the ones above.
+$hl-color: #2e3455;              // header link color (author name and posted on date) for blog post meta 
+$navbar-hover-color:#2e3455;        // navbar hover color (site name and navbar links hover color)
+$link-color: #2e3455;        // normal hyperlink color other than the ones above.
 
 
 // Heading colors
