--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -22,7 +22,8 @@
     <div class="intro-header">    
       <div class="container">
         <div class="post-heading">
-            <h1>{{page.title}}</h1>
+            
+            <h1><img src="{{- page.image | relative_url -}}" alt="" class="featured-image-post" width="100" height="100" style="vertical-align:middle">{{page.title}}</h1>
             <span class="meta">Posted by <a href="{{ site.baseurl }}/about"> {{page.author}}
             </a> on {{ page.date | date: "%B %e, %Y" }}
             <a href="{{ site.baseurl }}/"> { Return to Blog }</a>
