--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="icon" type="/images/favicon3.png" href="{{ site.favicon | relative_url }}">
+    <link rel="icon" type="/images/favicon.ico" href="{{ site.favicon | relative_url }}">
   </head>
 
   <body>
@@ -41,7 +41,7 @@
             <div class="centered">
               <ul class="ch-grid">
                 <li>
-                    <div class="ch-item ch-img-1">				
+                    <div class="ch-item">				
                         <div class="ch-info-wrap">
                             <div class="ch-info">
                                 <div class="ch-info-front ch-img-1"></div>
