--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,7 +21,7 @@ $blue: #4183C4;
 $mono-color:#21313b;                // main theme color(header, links, footer icons, buttons, post-title)
 $hl-color: #ffdfba;              // header link color (author name and posted on date) for blog post meta 
 $navbar-hover-color:#2e3455;        // navbar hover color (site name and navbar links hover color)
-$link-color: #1b90fd;        // normal hyperlink color other than the ones above.
+$link-color: #004b92;        // normal hyperlink color other than the ones above.
 
 
 // Heading colors
